--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -72,7 +72,7 @@ fra:
         label: 'Commande'
         lines: 'Lignes d''achat'
         moved_on: 'Reçu le'
-        payment_parts: 'Parties de décaissement'
+        payment_uses: 'Parties de décaissement'
         planned_on: 'Réception prévue le'
       purchase_order_line:
         order: 'Achat'
@@ -730,7 +730,7 @@ fra:
     payment_mode_id: 'Mode d''encaissement'
     payment_modes: 'Modes d''encaissement'
     payment_on: 'A régler au plus tard le'
-    payment_parts: 'Parties d''encaissement'
+    payment_uses: 'Parties d''encaissement'
     payment_way: 'Mode de décaissement'
     payments: 'Encaissements'
     payments_count: 'Nb. encaissements'
@@ -860,6 +860,7 @@ fra:
     started_on: 'Débuté le'
     started_sec: 'Date et heure (en secondes)'
     state: 'État'
+    state_label: 'État'
     stock: 'Stock de produit'
     stock_id: 'Stock de produit'
     stock_moves: 'Mouvements de stock'
@@ -902,7 +903,6 @@ fra:
     template_id: 'Modèle'
     text_importance: 'Importance'
     text_nature: 'Type'
-    text_state: 'État'
     theoric_quantity: 'Quantité théorique'
     title: 'Titre'
     to: 'Pour'
