--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -184,24 +184,21 @@ eng:
       sales_invoice: '%{nature} %{number}'
       sales_invoice_cancel: 'Cancel sales invoice %{number}'
       sales_invoices: 'Sales invoices'
-      sales_order: 'Sales order %{number}'
+      sales_order: 'Sales order %{number} - %{state}'
       sales_order_confirm: 'Confirm estimate and go to deliveries'
       #>sales_order_contacts: 'Sales order contacts'
       sales_order_create: 'New sales order'
-      sales_order_deliveries: 'Deliveries'
+      sales_order_deliveries: 'Deliveries' #!
       #>sales_order_duplicate: 'Sales order duplicate'
       sales_order_invoice: 'Invoice sales order'
       sales_order_line_create: 'Add a new line of product'
       #>sales_order_line_detail: 'Sales order line detail'
-      #>sales_order_line_informations: 'Sales order line informations'
-      #>sales_order_line_stocks: 'Sales order line stocks'
-      #>sales_order_line_tracking: 'Sales order line tracking'
       sales_order_line_update: 'Edit sales order line'
-      sales_order_lines: 'Selection of the products for the estimate %{sales_order}'
+      sales_order_lines: 'Selection of the products for the estimate %{sales_order}' #!
       sales_order_nature_create: 'Add a new type of sale'
       sales_order_nature_update: 'Edit the sales order type: %{name}'
       sales_order_natures: 'Sales order types'
-      sales_order_summary: 'Sales invoice and incoming payments of the sales order %{number}'
+      sales_order_summary: 'Sales invoice and incoming payments of the sales order %{number}' #!
       sales_order_update: 'Edit the sales order %{number}'
       sales_orders: 'Estimates and orders'
       #>self.sales_invoices_conditions: 'Self.sales invoices conditions'
@@ -416,7 +413,7 @@ eng:
     are_you_sure_you_want_to_confirm: 'Are you sure you want to order'
     are_you_sure_you_want_to_delete: 'Are you sure you want to delete this record?'
     are_you_sure_you_want_to_delete_delivery: 'Are you sure you want to remove the delivery of transport?'
-    are_you_sure_you_want_to_sales_invoice: 'Are you sure you want to sales invoice?'
+    are_you_sure_you_want_to_invoice: 'Are you sure you want to invoice?'
     are_you_sure_you_want_to_send_mails: 'Are you sure you want to send emails?'
     area_x: '%{name} (%{postcode})'
     assessable_operations: 'Assessable operations (without tax)'
@@ -450,9 +447,6 @@ eng:
       bank_statements: 'Bank statements'
       deposits: 'Deposits'
     cash_update: 'Update cash'
-    cashes:
-      one: '%{count} cash'
-      other: '%{count} cashes'
     catalog: 'Catalog'
     category: 'Category'
     category_name: 'Category'
@@ -493,9 +487,6 @@ eng:
     connect: 'Login'
     consult: 'Consult'
     contact: 'At'
-    contacts:
-      one: '%{count} contact'
-      other: '%{count} contacts'
     contains: 'Contains'
     coordinates: 'Coordinates'
     copy_of: 'Copy of %{source}'
@@ -564,9 +555,6 @@ eng:
     entities_import: 'Import a CSV file'
     entities_merge: 'People merge'
     entity_category_update: 'Update category'
-    entity_links:
-      one: '%{count} link'
-      other: '%{count} links'
     entity_print: 'Person print'
     entity_to_delete: 'Person to delete'
     entity_to_update: 'Person to update'
@@ -706,9 +694,6 @@ eng:
     management: 'Management (Sales, purchases and stocks)'
     management_index: 'Management index'
     management_rights: 'Management'
-    mandates:
-      one: '%{count} mandate'
-      other: '%{count} mandates'
     mandates_fields: 'You have to fill at least one field'
     mandates_filters: 'You have to fill at least one filter'
     mandates_new_fields: 'You have to fill at least one new field'
@@ -833,9 +818,6 @@ eng:
       success: 'Success'
       warning: 'Warning!'
     number: 'Number'
-    observations:
-      one: '%{count} observation'
-      other: '%{count} observations'
     on_account: 'On account'
     one_condition: 'One condition'
     operation_lines: 'Incoming and outgoing products'
@@ -854,9 +836,6 @@ eng:
     out_vat_amount: 'Basis without Taxes'
     outgoing_payment_update: 'Edit the payment'
     outgoing_payment_use_create: 'Pay purchase with a disbursement'
-    outgoing_payments:
-      one: '%{count} disbursement'
-      other: '%{count} disbursements'
     outgoing_payments_states:
       all: 'All'
       undelivered: 'Undelivered'
@@ -880,7 +859,7 @@ eng:
     payment_label: 'Payment label'
     payment_mode: 'Payment mode'
     payment_on: 'Payment on'
-    payment_parts: 'Payment parts'
+    payment_uses: 'Payment parts'
     payments: 'Payments'
     payments_amount: 'Payments amount'
     payments_count: 'Payments count'
@@ -929,8 +908,9 @@ eng:
     purchase_orders: 'Purchase orders'
     purchase_price_create: 'Purchase price create'
     purchase_steps:
-      active: 'Purchase'
-      summary: 'Payments'
+      deliveries: 'Incoming deliveries'
+      products: 'Purchase'
+      summary: 'Disbursements'
     purchases: 'Purchases'
     purchases_price_create: 'Purchases price create'
     quantity: 'Quantity'
@@ -970,14 +950,7 @@ eng:
     roles: 'Roles'
     running_cost: 'Running Cost'
     running_finished: 'Running Finished'
-    sale_conditions: 'Conditions of sales'
-    sale_price_create: 'Sale price create'
-    sale_steps:
-      deliveries: 'Deliveries'
-      estimate: 'Estimate'
-      general: 'General'
-      products: 'Products'
-      summary: 'Sales invoice and incoming payments'
+    sales_conditions: 'Conditions of sales'
     sales_invoice: 'Invoicing'
     sales_invoice_cancel: 'Cancel sales invoice'
     sales_invoice_lines: 'Sales invoice lines'
@@ -1002,6 +975,12 @@ eng:
       current: 'Current'
       unpaid: 'Unpaid'
     sales_price_create: 'Sales price create'
+    sales_steps:
+      deliveries: 'Deliveries'
+      estimate: 'Estimate'
+      general: 'General'
+      products: 'Products'
+      summary: 'Sales invoice'
     save: 'Save'
     save_in_draft: 'Save as draft'
     scheduled: 'Scheduled'
@@ -1119,6 +1098,15 @@ eng:
     warehouses: 'Warehouses'
     weight: 'Weight'
     with_prints: 'Include printing archives (sales invoices, purchase orders...)'
+    x_cashes:
+      one: '%{count} cash'
+      other: '%{count} cashes'
+    x_contacts:
+      one: '%{count} contact'
+      other: '%{count} contacts'
+    x_entity_links:
+      one: '%{count} link'
+      other: '%{count} links'
     x_events:
       one: '1 event'
       other: '%{count} events'
@@ -1131,10 +1119,19 @@ eng:
       one: '%{count} incoming payment'
       other: '%{count} incoming payments'
       zero: '0 incoming payments'
+    x_mandates:
+      one: '%{count} mandate'
+      other: '%{count} mandates'
+    x_observations:
+      one: '%{count} observation'
+      other: '%{count} observations'
     x_operations:
       one: '1 operation'
       other: '%{count} operations'
       zero: '0 operations'
+    x_outgoing_payments:
+      one: '%{count} disbursement'
+      other: '%{count} disbursements'
     x_prices:
       one: '1 price'
       other: '%{count} prices'
