--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -72,7 +72,7 @@ eng:
         label: 'Purchase order'
         lines: 'Purhase order lines'
         moved_on: 'Recevied on'
-        payment_parts: 'Parts of disbursements'
+        payment_uses: 'Parts of disbursements'
         planned_on: 'Reception on'
       purchase_order_line:
         order: 'Purchase order'
@@ -730,7 +730,7 @@ eng:
     payment_mode_id: 'Payment mode'
     payment_modes: 'Payment modes' #!
     payment_on: 'Payment on'
-    payment_parts: 'Payment parts'
+    payment_uses: 'Payment parts'
     payment_way: 'Payment way'
     payments: 'Payments'
     payments_count: 'Payments count'
@@ -859,6 +859,7 @@ eng:
     started_on: 'Started on'
     started_sec: 'Started sec'
     state: 'State'
+    state_label: 'Text state'
     stock: 'Stock'
     stock_id: 'Stock'
     stock_moves: 'Stock moves'
@@ -901,7 +902,6 @@ eng:
     template_id: 'Template'
     text_importance: 'Text importance'
     text_nature: 'Text type'
-    text_state: 'Text state'
     theoric_quantity: 'Theoric quantity'
     title: 'Title'
     to: 'To'
