Sets state machine for SalesOrder Begins to set for PurchaseOrder
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1672 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -150,10 +150,17 @@ arb:
       product_update: 'تعديل المنتج : {{name}}'
       products: 'المنتجات'
       purchase_order: 'تفاصيل الشراء {{number}} الى الممول {{supplier}} '
+      #>purchase_order_abort: 'Abort'
+      #>purchase_order_confirm: 'Confirm order and wait for deliveries'
+      #>purchase_order_correct: 'Correct order'
       purchase_order_create: 'شراء جديد'
+      #>purchase_order_finish: 'Finish order'
+      #>purchase_order_invoice: 'Receive invoice'
       purchase_order_line_create: 'اضافة طلب للمنتج : {{number}}'
       purchase_order_line_update: 'تعديل تصميم الطلب'
       purchase_order_lines: 'منتجات الشراء {{number}} للممول {{supplier}}'
+      #>purchase_order_propose: 'Propose order'
+      #>purchase_order_refuse: 'Refused order'
       purchase_order_summary: 'رقم دفعة الشراء{{number}}'
       purchase_order_update: 'تعديل الشراء : {{number}}'
       purchase_orders: 'المستريات'
@@ -161,9 +168,12 @@ arb:
       sales_invoice_cancel: 'مسالك شمولية الفاتورة {{number}}'
       sales_invoices: 'الفواتير'
       sales_order: 'تفاصيل البيع {{number}} للعميل {{client}}'
+      #>sales_order_abort: 'Abort sale'
       sales_order_confirm: 'المضي بطلب تحديد السعر والاتجاه الى التسليم'
+      #>sales_order_correct: 'Correct estimate'
       sales_order_create: 'بيع جديد'
       sales_order_deliveries: 'التسليم'
+      #>sales_order_finish: 'Finish sale'
       sales_order_invoice: 'فوترة طلب البيع'
       sales_order_line_create: 'اضافة تصميم خطوط المنتج'
       sales_order_line_informations: '' #!
@@ -172,6 +182,8 @@ arb:
       sales_order_nature_create: 'اضافة نوع البيع'
       sales_order_nature_update: 'تعديل نوع البيع : {{name}}'
       sales_order_natures: 'انواع طلبات البيع'
+      #>sales_order_propose: 'Propose estimate'
+      #>sales_order_refuse: 'Estimate refused'
       sales_order_summary: 'فوترة دفعة  (دفعات) طلب الشراء {{number}}'
       sales_order_update: 'تعديل طلب البيع رقم{{number}}'
       sales_orders: 'الطلبات وتحديد الاسعار'
@@ -414,7 +426,7 @@ arb:
     click_to_mail: 'اكتب الرسالة بالبريد الالكتروني الخاص بك'
     client: 'اختيار العميل'
     client_balance: 'رصيد العميل'
-    #>client_code: 'Code client'
+    #>client_code: 'Client code'
     #>client_informations: 'Client informations'
     #>client_phone: 'Phone'
     close: 'اغلاق الدفتر اليومي'
@@ -1042,6 +1054,7 @@ arb:
     subtotal: 'المجموع الاجمالي {{name}}'
     subtotals_at_level: 'المبلغ الاجمالي على مستوى'
     supplier: 'اسعار البيع للممولين'
+    #>supplier_code: 'Supplier code'
     #>supplier_informations: 'Supplier informations '
     supply: 'التسليم'
     synthesis: 'تجميع الوثائق'
