--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -146,10 +146,17 @@ fra:
       product_update: 'Modifier le produit : %{name}'
       products: 'Produits'
       purchase_order: 'Détails de l''achat %{number} au fournisseur %{supplier} '
+      #>purchase_order_abort: 'Abort'
+      #>purchase_order_confirm: 'Confirm order and wait for deliveries'
+      #>purchase_order_correct: 'Correct order'
       purchase_order_create: 'Nouvel achat'
+      #>purchase_order_finish: 'Finish order'
+      #>purchase_order_invoice: 'Receive invoice'
       purchase_order_line_create: 'Ajouter un produit à la commande : %{number}'
       purchase_order_line_update: 'Modifier une ligne de la commande'
       purchase_order_lines: 'Produits de l''achat %{number} au fournisseur %{supplier}'
+      #>purchase_order_propose: 'Propose order'
+      #>purchase_order_refuse: 'Refused order'
       purchase_order_summary: 'Décaissements de l''achat N°%{number}'
       purchase_order_update: 'Modifier l''achat : %{number}'
       purchase_orders: 'Achats'
@@ -157,9 +164,12 @@ fra:
       sales_invoice_cancel: 'Passage en avoir de la facture %{number}'
       sales_invoices: 'Factures'
       sales_order: 'Détails de la vente %{number} au client %{client}'
+      #>sales_order_abort: 'Abort sale'
       sales_order_confirm: 'Passer le devis en commande et aller aux livraisons'
+      #>sales_order_correct: 'Correct estimate'
       sales_order_create: 'Nouvelle vente'
       sales_order_deliveries: 'Livraisons'
+      #>sales_order_finish: 'Finish sale'
       sales_order_invoice: 'Facturer directement tout le devis'
       sales_order_line_create: 'Ajout d''une ligne de produit'
       sales_order_line_update: 'Modifier une ligne de produit'
@@ -167,6 +177,8 @@ fra:
       sales_order_nature_create: 'Ajout d''un type de vente'
       sales_order_nature_update: 'Modifier le type de vente : %{name}'
       sales_order_natures: 'Types de ventes'
+      #>sales_order_propose: 'Propose estimate'
+      #>sales_order_refuse: 'Estimate refused'
       sales_order_summary: 'Facture et encaissement(s) de la vente %{number}'
       sales_order_update: 'Modifier la vente N°%{number}'
       sales_orders: 'Devis et commandes'
@@ -971,6 +983,7 @@ fra:
     subtotal: 'Sous-total %{name}'
     subtotals_at_level: 'Sous-totaux aux niveaux'
     supplier: 'Fournisseur'
+    #>supplier_code: 'Supplier code'
     supplier_informations: 'Informations fournisseur'
     supply: 'Livraison'
     synthesis: 'Documents de synthèse'
