--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -145,10 +145,17 @@ jpn:
       #>product_update: 'Edit the product: %{name}'
       #>products: 'Products'
       #>purchase_order: 'Details of the purchase %{number} at %{supplier} '
+      #>purchase_order_abort: 'Abort'
+      #>purchase_order_confirm: 'Confirm order and wait for deliveries'
+      #>purchase_order_correct: 'Correct order'
       #>purchase_order_create: 'New purchase order'
+      #>purchase_order_finish: 'Finish order'
+      #>purchase_order_invoice: 'Receive invoice'
       #>purchase_order_line_create: 'Add a product to the purchase: %{number}'
       #>purchase_order_line_update: 'Edit the purhase order line'
       #>purchase_order_lines: 'Products of the purchase %{number} to the supplier %{supplier}'
+      #>purchase_order_propose: 'Propose order'
+      #>purchase_order_refuse: 'Refused order'
       #>purchase_order_summary: 'Payments of the purchase order %{number}'
       #>purchase_order_update: 'Edit the purchase order: %{number}'
       #>purchase_orders: 'Purchase orders'
@@ -156,9 +163,12 @@ jpn:
       #>sales_invoice_cancel: 'Cancel sales invoice %{number}'
       #>sales_invoices: 'Sales invoices'
       #>sales_order: 'Sales order %{number} - %{state}'
+      #>sales_order_abort: 'Abort sale'
       #>sales_order_confirm: 'Confirm estimate and go to deliveries'
+      #>sales_order_correct: 'Correct estimate'
       #>sales_order_create: 'New sales order'
       #>sales_order_deliveries: 'Deliveries'
+      #>sales_order_finish: 'Finish sale'
       #>sales_order_invoice: 'Invoice sales order'
       #>sales_order_line_create: 'Add a new line of product'
       #>sales_order_line_update: 'Edit sales order line'
@@ -166,6 +176,8 @@ jpn:
       #>sales_order_nature_create: 'Add a new type of sale'
       #>sales_order_nature_update: 'Edit the sales order type: %{name}'
       #>sales_order_natures: 'Sales order types'
+      #>sales_order_propose: 'Propose estimate'
+      #>sales_order_refuse: 'Estimate refused'
       #>sales_order_summary: 'Sales invoice and incoming payments of the sales order %{number}'
       #>sales_order_update: 'Edit the sales order %{number}'
       #>sales_orders: 'Estimates and orders'
@@ -400,7 +412,7 @@ jpn:
     #>click_to_mail: 'Click to email with your own mail software'
     #>client: 'Client'
     #>client_balance: 'Client balance'
-    #>client_code: 'Code client'
+    #>client_code: 'Client code'
     #>client_informations: 'Client informations'
     #>client_phone: 'Phone'
     close: '閉じる'
@@ -969,6 +981,7 @@ jpn:
     #>subtotal: 'Sub-total %{name}'
     #>subtotals_at_level: 'Sub-total at level'
     #>supplier: 'Purchase prices of the supplier'
+    #>supplier_code: 'Supplier code'
     #>supplier_informations: 'Supplier informations '
     #>supply: 'Supply'
     #>synthesis: 'Synthesis Documents'
