--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -35,7 +35,6 @@ spa:
       inventory_line:
         #>quantity: 'Found quantity'
       journal_entry:
-        #>outgoing_payment_uses: 'Parts or disbursements'
       journal_entry_line:
         #>closed: 'Closed'
       land_parcel:
@@ -89,7 +88,6 @@ spa:
         #>contact_id: 'Address for the estimate'
         #>has_downpayment: 'Request a downpayment'
         #>lines: 'Sales order lines'
-        #>parts_amount: 'Paid amount'
         #>payments: 'Incoming payments'
       sales_order_line:
         #>label: 'Product'
@@ -121,7 +119,6 @@ spa:
         #>active: 'Used'
       transfer:
         #>amount: 'Amount'
-        #>parts_amount: 'Paid amount'
       unit:
         #>start: 'Value at the origin'
       user:
@@ -858,7 +855,7 @@ spa:
     #>started_on: 'Started on'
     #>started_sec: 'Started sec'
     #>state: 'State'
-    #>state_label: 'Text state'
+    #>state_label: 'State'
     #>stock: 'Stock'
     #>stock_id: 'Stock'
     #>stock_moves: 'Stock moves'
@@ -939,6 +936,7 @@ spa:
     #>usage: 'Usage'
     #>usage_duration: 'Usage duration'
     #>use_range: 'Use range'
+    #>used_amount: 'Used amount'
     #>user: 'User'
     #>user_id: 'User'
     #>users: 'Users'
@@ -1309,6 +1307,14 @@ spa:
     purchase_order:
       #>label: '%{supplier} at %{address}'
       #>purchase: 'Purchase'
+      states:
+        #>aborted: 'Aborted'
+        #>draft: 'Draft'
+        #>finished: 'Finished'
+        #>invoiced: 'Invoiced'
+        #>processing: 'Waiting...'
+        #>ready: 'Ready purchase order'
+        #>refused: 'Refused purchase order'
       #>to_accountancy: '[%{resource} %{number}] %{products} of %{supplier}'
     purchase_order_line:
       #>name: '%{product} (%{quantity}%{unit}), %{amount}%{currency}/%{unit}'
@@ -1334,9 +1340,13 @@ spa:
         #>downpayment: 'A downpayment of %{percent}% (i.e. %{amount}€) must be paid at the signature of this present estimate.'
         #>validity: 'This estimate and its general conditions are available until the %{expiration}.'
       states:
-        #>A: 'Active'
-        #>C: 'Finished'
-        #>E: 'Estimate'
+        #>aborted: 'Aborted'
+        #>draft: 'Draft'
+        #>finished: 'Finished'
+        #>invoiced: 'Invoiced'
+        #>processing: 'Processing...'
+        #>ready: 'Ready estimate'
+        #>refused: 'Refused estimate'
     sales_order_line:
       #>can_not_use_this_tracking: 'You can not use the tracking %{name}, the requested quantity is greater than the available quantity'
       #>currency_is_not_sales_order_currency: 'The currency of the price differs from the sales order currency'
