--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -708,7 +708,7 @@ fra:
     paid: 'Réglée'
     paid_account: 'TVA déductible'
     paid_account_id: 'TVA déductible'
-    paid_amount: 'TVA déductible'
+    paid_amount: 'Montant payé'
     paid_on: 'Réglé le'
     parent: 'Parent'
     parent_id: 'Parent'
@@ -1305,13 +1305,13 @@ fra:
       label: '%{supplier} à %{address}'
       purchase: 'Achat'
       states:
-        #>aborted: 'Aborted'
-        #>draft: 'Draft'
-        #>finished: 'Finished'
-        #>invoiced: 'Invoiced'
-        #>processing: 'Waiting...'
-        #>ready: 'Ready purchase order'
-        #>refused: 'Refused purchase order'
+        aborted: 'Annulé'
+        draft: 'Brouillon'
+        finished: 'Terminé'
+        invoiced: 'Facture reçue'
+        processing: 'En attente des livraisons...'
+        ready: 'Prêt à transmettre'
+        refused: 'Refusé'
       to_accountancy: '[%{resource} %{number}] %{products} de %{supplier}'
     purchase_order_line:
       name: '%{product} (%{quantity}%{unit}) à %{amount}%{currency}/%{unit}'
@@ -1337,16 +1337,13 @@ fra:
         downpayment: 'Un acompte de %{percent}% (soit %{amount}€) devra être versé à la signature du présent devis.'
         validity: 'Ce devis et ses conditions générales sont valables jusqu''au %{expiration}.'
       states:
-        A: 'En cours' #!
-        C: 'Terminée' #!
-        E: 'Devis' #!
-        #>aborted: 'Aborted'
-        #>draft: 'Draft'
-        #>finished: 'Finished'
-        #>invoiced: 'Invoiced'
-        #>processing: 'Processing...'
-        #>ready: 'Ready estimate'
-        #>refused: 'Refused estimate'
+        aborted: 'Annulée'
+        draft: 'Brouillon'
+        finished: 'Terminée'
+        invoiced: 'Facturée'
+        processing: 'En cours...'
+        ready: 'Devis prêt'
+        refused: 'Devis refusé'
     sales_order_line:
       can_not_use_this_tracking: 'Vous ne  pouvez pas utiliser le lot %{name}, la quantité commandée est supérieure à la quantité disponible '
       currency_is_not_sales_order_currency: 'Le prix du produit ne correspond pas à la monnaie définie pour la vente'
