Replaces list_evalue with attributes_list in views
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1675 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -110,6 +110,11 @@ arb:
       deposit_create: 'انشاء اقتطاع : {{mode}}'
       deposit_update: 'تعديل اقتطاعات البنك من {{created_on}}'
       deposits: 'اقتطاعات البنك'
+      #>incoming_delivery_create: 'Add a new incoming delivery'
+      #>incoming_delivery_mode_create: 'Add a new incoming delivery mode'
+      #>incoming_delivery_mode_update: 'Edit the incoming delivery mode: %{name}'
+      #>incoming_delivery_modes: 'Incoming delivery modes'
+      #>incoming_delivery_update: 'Edit the incoming delivery'
       incoming_payment: 'دفعة رقم{{number}} من {{entity}}'
       incoming_payment_create: 'اضافة دفعة جديدة'
       incoming_payment_mode_create: 'اضافة طريقة جديدة لتسديد الفعة'
