--- a/config/locales/arb/rights.yml
+++ b/config/locales/arb/rights.yml
@@ -40,6 +40,8 @@ arb:
     manage_estimates: 'انشاء وتعديل التقديرات'
     manage_events: 'ادارة الاحداث'
     manage_financial_years: 'ادارة وبدأ السنة المالية'
+    #>manage_incoming_delivery_modes: '(((MANAGE_INCOMING_DELIVERY_MODES)))'
+    #>manage_incoming_payment_modes: '(((MANAGE_INCOMING_PAYMENT_MODES)))'
     manage_incoming_payments: 'ادارة قواعد البيع'
     manage_inventories: 'ادارة عمبيات الجرد'
     manage_journal_entries: 'ادارة المدخلات'
@@ -50,8 +52,11 @@ arb:
     manage_mandates: 'ادارة التفويضات'
     manage_observations: 'ادارة الملاحظات'
     manage_operations: 'ادارة الاجراءات'
-    manage_outgoing_deliveries: 'ادارة انواع التسليم'
-    manage_payment_modes: 'ادارة طرق الدفع'
+    manage_outgoing_deliveries: 'ادارة انواع التسليم' #!
+    #>manage_outgoing_delivery_modes: '(((MANAGE_OUTGOING_DELIVERY_MODES)))'
+    #>manage_outgoing_payment_modes: '(((MANAGE_OUTGOING_PAYMENT_MODES)))'
+    #>manage_outgoing_payments: '(((MANAGE_OUTGOING_PAYMENTS)))'
+    manage_payment_modes: 'ادارة طرق الدفع' #!
     manage_prices: 'ادارة الاموال'
     manage_product_categories: 'ادارة فئات المنتجات'
     manage_products: 'ادارة المنتجات'
