--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -1068,9 +1068,17 @@ eng:
               format: 'P[year|4][number|6]'
               name: 'Numeration of payments'
               period: 'year'
+            incoming_deliveries:
+              format: 'ID[year|4][number|4]'
+              name: 'Numeration of incoming deliveries'
+              period: 'year'
             outgoing_payments:
               format: 'D[year|4][number|4]'
               name: 'Numeration of payments'
+              period: 'year'
+            outgoing_deliveries:
+              format: 'OD[year|4][number|6]'
+              name: 'Numeration of outgoing deliveries'
               period: 'year'
             purchase_orders:
               format: 'PO[year|4][month|2][number|4]'
