--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -127,8 +127,11 @@ eng:
       deposit_create: 'Add a new deposit: %{mode}'
       deposit_update: 'Edit the deposit %{number}'
       deposits: 'Deposits'
-      #>incoming_delivery_create: 'Incoming delivery create'
-      #>incoming_delivery_update: 'Incoming delivery update'
+      incoming_delivery_create: 'Add a new incoming delivery'
+      incoming_delivery_mode_create: 'Add a new incoming delivery mode'
+      incoming_delivery_mode_update: 'Edit the incoming delivery mode: %{name}'
+      incoming_delivery_modes: 'Incoming delivery modes'
+      incoming_delivery_update: 'Edit the incoming delivery'
       incoming_payment: 'Incoming payment %{number} de %{entity}'
       incoming_payment_create: 'Add a new incoming payment'
       incoming_payment_mode_create: 'Add a new incoming payment mode'
@@ -144,9 +147,9 @@ eng:
       #>inventory_reflect: 'Inventory reflect'
       inventory_update: 'Edit the inventory'
       outgoing_delivery_create: 'Add a new delivery'
-      outgoing_delivery_mode_create: 'Add a new delivery mode'
-      outgoing_delivery_mode_update: 'Edit the delivery mode: %{name}'
-      outgoing_delivery_modes: 'Delivery modes'
+      outgoing_delivery_mode_create: 'Add a new outgoing delivery mode'
+      outgoing_delivery_mode_update: 'Edit the outgoing delivery mode: %{name}'
+      outgoing_delivery_modes: 'Outgoing delivery modes'
       outgoing_delivery_update: 'Edit the delivery'
       outgoing_payment: 'Disbursement %{number} for %{payee}'
       outgoing_payment_create: 'Add a new disbursement'
@@ -163,10 +166,10 @@ eng:
       #>prices_export: 'Prices export'
       prices_import: 'Import prices in CSV'
       product: 'Product: %{name}'
-      product_categories: 'product_categories'
-      product_category: 'product_category: %{name}'
-      product_category_create: 'Add a new product_category'
-      product_category_update: 'Edit the product_category: %{name}'
+      product_categories: 'Product categories'
+      product_category: 'Product category: %{name}'
+      product_category_create: 'Add a new product category'
+      product_category_update: 'Edit the product category: %{name}'
       product_component_create: 'Add a new component to %{product}'
       product_component_update: 'Edit the component of %{product} '
       product_create: 'Add a new product'
@@ -899,8 +902,7 @@ eng:
     print_on: 'Print on'
     print_with_template: 'Print %{name}'
     product: 'Product'
-    product_category: 'product_category'
-    product_category_update: 'product_category update'
+    product_category: 'Product category'
     product_name: 'Product name'
     product_tabbox:
       components: 'Components'
