--- a/config/locales/eng/rights.yml
+++ b/config/locales/eng/rights.yml
@@ -41,6 +41,8 @@ eng:
     manage_estimates: 'Create and update estimates'
     manage_events: 'Manage events'
     manage_financial_years: 'Manage and close financial years'
+    manage_incoming_delivery_modes: (((MANAGE_INCOMING_DELIVERY_MODES)))
+    manage_incoming_payment_modes: (((MANAGE_INCOMING_PAYMENT_MODES)))
     manage_incoming_payments: 'Manage sale payments'
     manage_inventories: 'Manage inventories'
     manage_journal_entries: 'Manaeg journal entries'
@@ -51,8 +53,9 @@ eng:
     manage_mandates: 'Manage mandates'
     manage_observations: 'Manage observations'
     manage_operations: 'Manage operations'
-    manage_outgoing_deliveries: 'Manage sale delivery modes'
-    manage_payment_modes: 'Manage payment modes'
+    manage_outgoing_delivery_modes: (((MANAGE_OUTGOING_DELIVERY_MODES)))
+    manage_outgoing_payment_modes: (((MANAGE_OUTGOING_PAYMENT_MODES)))
+    manage_outgoing_payments: (((MANAGE_OUTGOING_PAYMENTS)))
     manage_prices: 'Manage prices'
     manage_product_categories: 'Manage product categories'
     manage_products: 'Manage products'
