--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -106,6 +106,11 @@ fra:
       deposit_create: 'Créer une remise : %{mode}'
       deposit_update: 'Modifier la remise en banque n°%{number} du %{created_on}'
       deposits: 'Remises en banque'
+      #>incoming_delivery_create: 'Add a new incoming delivery'
+      #>incoming_delivery_mode_create: 'Add a new incoming delivery mode'
+      #>incoming_delivery_mode_update: 'Edit the incoming delivery mode: %{name}'
+      #>incoming_delivery_modes: 'Incoming delivery modes'
+      #>incoming_delivery_update: 'Edit the incoming delivery'
       incoming_payment: 'Encaissement n°%{number} de %{entity}'
       incoming_payment_create: 'Ajout d''un nouvel encaissement'
       incoming_payment_mode_create: 'Ajouter un nouveau mode d''encaissement'
