Fixes a bug on sum computation
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1676 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -140,10 +140,10 @@ jpn:
       #>prices: 'Prices'
       #>prices_import: 'Import prices in CSV'
       #>product: 'Product: %{name}'
-      #>product_categories: 'product_categories'
-      #>product_category: 'product_category: %{name}'
-      #>product_category_create: 'Add a new product_category'
-      #>product_category_update: 'Edit the product_category: %{name}'
+      #>product_categories: 'Product categories'
+      #>product_category: 'Product category: %{name}'
+      #>product_category_create: 'Add a new product category'
+      #>product_category_update: 'Edit the product category: %{name}'
       #>product_component_create: 'Add a new component to %{product}'
       #>product_component_update: 'Edit the component of %{product} '
       #>product_create: 'Add a new product'
@@ -628,8 +628,6 @@ jpn:
       #>suppliers: 'Suppliers'
       #>title: 'third Party category'
     #>line: 'Line #%{index}:'
-    #>line_amount: 'Unit price'
-    #>line_amount_with_taxes: 'Unit price with taxes'
     #>line_stock: 'Warehouse: %{warehouse}, available quantity: %{virtual_q}'
     #>listing_extract: 'Extract listing'
     #>listing_mail: 'Email a listing'
@@ -843,8 +841,7 @@ jpn:
     #>print_on: 'Print on'
     #>print_with_template: 'Print %{name}'
     #>product: 'Product'
-    #>product_category: 'product_category'
-    #>product_category_update: 'product_category update'
+    #>product_category: 'Product category'
     #>product_name: 'Product name'
     product_tabbox:
       #>components: 'Components'
@@ -1015,6 +1012,8 @@ jpn:
     #>undeposited: 'Undeposited'
     #>uninvoiced_amount: 'Uninvoiced amount'
     #>unit: 'Unit'
+    #>unit_price_amount: 'Unit price'
+    #>unit_price_amount_with_taxes: 'Unit price with taxes'
     #>units_load: 'Load missing units'
     #>unknown_condition: 'Unknown condition'
     #>unlock: 'Unlock'
