--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -669,8 +669,6 @@ arb:
       suppliers: 'الممولون'
       title: 'العنصر الثالث'
     line: 'سطر رقم{{index}} :'
-    line_amount: 'PU HT'
-    line_amount_with_taxes: 'PU TTC'
     line_stock: 'مكان التخزين: {{warehouse}}, الكمية المتوفرة: {{virtual_q}}'
     lines: 'تصميم خطوط البيع' #!
     listing_create: 'انشاء استخراج جديد' #!
@@ -898,7 +896,7 @@ arb:
     product: 'المنتج'
     product_category: 'الفئة'
     product_category_create: 'اضافة فئة جديدة للمنتج' #!
-    product_category_update: 'تعديل الفئة'
+    product_category_update: 'تعديل الفئة' #!
     product_component_create: 'اضافة عنصر للمنتج' #!
     product_create: 'اضافة منتج جديد' #!
     product_name: 'المنتج'
@@ -1097,6 +1095,8 @@ arb:
     uninvoiced_amount: 'قيمة غير مفوترة'
     unit: 'الوحدة'
     unit_create: 'اضافة وحدة قياس جديدة' #!
+    unit_price_amount: 'PU HT'
+    unit_price_amount_with_taxes: 'PU TTC'
     units_load: 'تحميل الوحدات الاساسية المفقودة'
     unknown_condition: 'غير معروف نوع الشرط'
     unlock: 'فتح القفل'
